Source/WebKit2/UIProcess/ios/WKPDFView.mm
@@ -29,7 +29,9 @@
 #if PLATFORM(IOS)
 
 #import "WKPDFPageNumberIndicator.h"
+#import "WKWebViewInternal.h"
 #import <CorePDF/UIPDFDocument.h>
+#import <CorePDF/UIPDFPage.h>
 #import <CorePDF/UIPDFPageView.h>
 #import <WebCore/FloatRect.h>
 #import <wtf/RetainPtr.h>
@@ -60,17 +62,25 @@ typedef struct {
 
     CGSize _minimumSize;
     CGSize _overlaidAccessoryViewsInset;
-    UIEdgeInsets _obscuredInsets;
+    WKWebView *_webView;
     UIScrollView *_scrollView;
     UIView *_fixedOverlayView;
 }
 
-- (instancetype)initWithFrame:(CGRect)frame
+- (instancetype)web_initWithFrame:(CGRect)frame webView:(WKWebView *)webView
 {
     if (!(self = [super initWithFrame:frame]))
         return nil;
 
     self.backgroundColor = [UIColor grayColor];
+
+    _webView = webView;
+
+    _scrollView = webView.scrollView;
+    [_scrollView setMinimumZoomScale:pdfMinimumZoomScale];
+    [_scrollView setMaximumZoomScale:pdfMaximumZoomScale];
+    [_scrollView setContentSize:_documentFrame.size];
+    [_scrollView setBackgroundColor:[UIColor grayColor]];
 
     return self;
 }
@@ -175,7 +185,8 @@ typedef struct {
 
 - (CGPoint)_offsetForPageNumberIndicator
 {
-    return CGPointMake(_obscuredInsets.left, _obscuredInsets.top + _overlaidAccessoryViewsInset.height);
+    UIEdgeInsets contentInset = [_webView _computedContentInset];
+    return CGPointMake(contentInset.left, contentInset.top + _overlaidAccessoryViewsInset.height);
 }
 
 - (void)_updatePageNumberIndicator
@@ -189,20 +200,15 @@ typedef struct {
     [_pageNumberIndicator moveToPoint:[self _offsetForPageNumberIndicator] animated:NO];
 }
 
-- (void)web_setObscuredInsets:(UIEdgeInsets)insets
-{
-    if (UIEdgeInsetsEqualToEdgeInsets(insets, _obscuredInsets))
-        return;
-
-    _obscuredInsets = insets;
-
-    [self _updatePageNumberIndicator];
-}
-
 - (void)web_setOverlaidAccessoryViewsInset:(CGSize)inset
 {
     _overlaidAccessoryViewsInset = inset;
     [_pageNumberIndicator moveToPoint:[self _offsetForPageNumberIndicator] animated:YES];
+}
+
+- (void)web_computedContentInsetDidChange
+{
+    [self _updatePageNumberIndicator];
 }
 
 - (void)web_setFixedOverlayView:(UIView *)fixedOverlayView
